project completed: learning spring modulith concepts using a real hands-on lab